; ModuleID = '/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_cache_uri_count_by_md5.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_cache_uri_count_by_md5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_uri = type { %struct.cache_uri* }
%struct.TYPE_4__ = type { i32* }

@uri_hash_prime = common dso_local global i32 0, align 4
@H = common dso_local global %struct.cache_uri** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32)* @cache_uri_count_by_md5 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cache_uri_count_by_md5(%struct.TYPE_4__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.cache_uri*, align 8
  %8 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @uri_hash_prime, align 4
  %15 = srem i32 %13, %14
  store i32 %15, i32* %6, align 4
  store i32 0, i32* %8, align 4
  %16 = load %struct.cache_uri**, %struct.cache_uri*** @H, align 8
  %17 = load i32, i32* %6, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds %struct.cache_uri*, %struct.cache_uri** %16, i64 %18
  %20 = load %struct.cache_uri*, %struct.cache_uri** %19, align 8
  store %struct.cache_uri* %20, %struct.cache_uri** %7, align 8
  br label %21

21:                                               ; preds = %38, %2
  %22 = load %struct.cache_uri*, %struct.cache_uri** %7, align 8
  %23 = icmp ne %struct.cache_uri* %22, null
  br i1 %23, label %24, label %42

24:                                               ; preds = %21
  %25 = load %struct.cache_uri*, %struct.cache_uri** %7, align 8
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %27 = load i32, i32* %5, align 4
  %28 = call i64 @cache_uri_match_md5(%struct.cache_uri* %25, %struct.TYPE_4__* %26, i32 %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %37

30:                                               ; preds = %24
  %31 = load i32, i32* %8, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %8, align 4
  %33 = icmp sgt i32 %32, 1
  br i1 %33, label %34, label %36

34:                                               ; preds = %30
  %35 = load i32, i32* %8, align 4
  store i32 %35, i32* %3, align 4
  br label %44

36:                                               ; preds = %30
  br label %37

37:                                               ; preds = %36, %24
  br label %38

38:                                               ; preds = %37
  %39 = load %struct.cache_uri*, %struct.cache_uri** %7, align 8
  %40 = getelementptr inbounds %struct.cache_uri, %struct.cache_uri* %39, i32 0, i32 0
  %41 = load %struct.cache_uri*, %struct.cache_uri** %40, align 8
  store %struct.cache_uri* %41, %struct.cache_uri** %7, align 8
  br label %21

42:                                               ; preds = %21
  %43 = load i32, i32* %8, align 4
  store i32 %43, i32* %3, align 4
  br label %44

44:                                               ; preds = %42, %34
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i64 @cache_uri_match_md5(%struct.cache_uri*, %struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
